--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -36,7 +36,7 @@
 
         <div>
             <input type="number" id="totalInput">
-            <button onclick="doTransaction()">Pagar</button>
+            <button onclick="doTransaction()" id="paybtn">Pagar</button>
         </div>
 
         <!--Galeria de productos-->
