--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -35,8 +35,22 @@
         </div>
 
         <div>
-            <input type="number" id="totalInput">
-            <button onclick="doTransaction()" id="paybtn">Pagar</button>
+            <input id="totalInput" type="hidden">
+            <button onclick="doTransaction()" id="paybtn" class="paybtn" 
+            style="
+                text-align: center; 
+                width:10%; 
+                margin-left:45%; 
+                margin-top: 30px;
+                border: none; 
+                font-size: 16px; 
+                font-weight: bold; 
+                border-radius: 16px;
+                background-color: rgb(21, 0, 128); 
+                color: white; 
+                height: 30px;
+                box-shadow: 0px 5px 0px 0px rgb(9, 0, 56);">
+                Pagar</button>
         </div>
 
         <!--Galeria de productos-->
