--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -153,7 +153,7 @@
         const user_type = sessionStorage.getItem('user_type');
         const user_id = sessionStorage.getItem('user_id');
 
-        document.getElementById('nombre').textContent = user_name;
+        //document.getElementById('nombre').textContent = user_name;
         //document.getElementById('e-mail').textContent = user_email;
         //document.getElementById('tipo').textContent = user_type;
         //document.getElementById('id').textContent = user_id;
